--- a/Prak 03/Prak_03.rmd
+++ b/Prak 03/Prak_03.rmd
@@ -42,6 +42,8 @@ install_load <- function (package1, ...)  {
    } 
 }
 
+install_load("knitr","ggplot2","viridis","dplyr","DT")
+
 # Set wd 
 opts_knit$set(root.dir = normalizePath("./"))
 ```
@@ -67,6 +69,15 @@ Dalam pekan ini, kita akan mengeksplorasi beberapa teknik visualisasi untuk mema
 
 Data yang akan digunakan adalah
 
+```{r}
+# Data
+data_cars <- mtcars %>%
+  mutate(cc = disp * 16.3871) %>% # konversi volume mesin ke cc
+  select(-disp) 
+  
+View(data_cars)
+```
+
 ------------------------------------------------------------------------
 
 # **Relationship** {#relationship}
@@ -80,6 +91,15 @@ Hubungan antar variabel dalam data dapat divisualisasikan menggunakan berbagai t
 ![](images/clipboard-176516700.png){width="168"}
 
 Scatterplot digunakan untuk menunjukkan hubungan antara dua variabel numerik.
+
+```{r fig.height=5, fig.width=11.5, dpi=300}
+ggplot(data_cars, aes(x = cc, y = hp)) +
+  geom_point(color = "blue") +  # Titik berwarna biru
+  labs(title = "Hubungan Displacement (cc) dengan Horsepower",
+       x = "Displacement (cc)",
+       y = "Horsepower") +
+  theme_minimal()
+```
 
 ## Parallel Coordinates Plot {#parallel-coordinates-plot}
 
