--- a/Prak 03/Prak_03.rmd
+++ b/Prak 03/Prak_03.rmd
@@ -42,7 +42,7 @@ install_load <- function (package1, ...)  {
    } 
 }
 
-install_load("knitr","ggplot2","viridis","dplyr","DT")
+install_load("knitr","ggplot2","viridis","dplyr","DT","showtext")
 
 # Set wd 
 opts_knit$set(root.dir = normalizePath("./"))
@@ -51,6 +51,10 @@ opts_knit$set(root.dir = normalizePath("./"))
 if (!dir.exists("Chart")) {
   dir.create("Chart")
 }
+
+# Add Google Fonts 
+font_add_google("Lato", "lato")
+showtext_auto()
 ```
 
 # Materi Praktikum
@@ -107,15 +111,15 @@ ggplot(data_cars, aes(x = cc, y = mpg, color = factor(cyl), shape = factor(am)))
   labs(title = "Efek Silinder & Transmisi terhadap Efisiensi BBM",
        subtitle = "(Semakin Rendah mpg, Semakin Boros)",
        x = "Kapasitas Mesin (cc)",
-       y = "Efisiensi BBM     Irit",
+       y = "← Boros          Efisiensi BBM          Irit →",
        color = "Jumlah Silinder",
        shape = "Transmisi") +
   
-  theme_minimal() +
-  theme(axis.text.y = element_text(size = 8, hjust = 1, face = "bold", 
+  theme_minimal(base_size = 30) +
+  theme(axis.text.y = element_text(hjust = 1, face = "bold", 
                                    margin = margin(r = 1)),
-        plot.title = element_text(hjust = 0, size = 14, face = "bold"),
-        plot.subtitle = element_text(hjust = -0.05, size = 8),
+        plot.title = element_text(hjust = 0, face = "bold"),
+        plot.subtitle = element_text(hjust = -0.05),
         panel.grid.major.y = element_blank(),
         panel.grid.minor.y = element_blank(),
         panel.grid.major.x = element_blank(),
