--- a/Prak 03/Prak_03.rmd
+++ b/Prak 03/Prak_03.rmd
@@ -81,8 +81,12 @@ Data yang akan digunakan adalah
 ```{r}
 # Data
 data_cars <- mtcars %>%
-  mutate(cc = disp * 16.3871) %>% # konversi volume mesin ke cc
-  select(-disp) 
+  mutate(
+    cc = disp * 16.3871, # konversi volume mesin ke cc
+    engine = ifelse(vs == 0, "V-Engine", "Inline"),
+    trans = ifelse(am == 0, "Automatic", "Manual")
+    ) %>% 
+  select(-disp, -vs, -am) 
   
 View(data_cars)
 ```
@@ -103,13 +107,13 @@ Scatterplot digunakan untuk menunjukkan hubungan antara dua variabel numerik.
 
 ```{r fig.height=5, fig.width=11.5, dpi=300}
 chart <-
-ggplot(data_cars, aes(x = cc, y = mpg, color = factor(cyl), shape = factor(am))) +
+ggplot(data_cars, aes(x = cc, y = mpg, color = factor(cyl), shape = factor(trans))) +
   # Scatterplot
   geom_point(size = 3) +  
   
   # Setting 
   labs(title = "Efek Silinder & Transmisi terhadap Efisiensi BBM",
-       subtitle = "(Semakin Rendah mpg, Semakin Boros)",
+       subtitle = "",
        x = "Kapasitas Mesin (cc)",
        y = "← Boros          Efisiensi BBM          Irit →",
        color = "Jumlah Silinder",
