--- a/Prak 03/Prak_03.rmd
+++ b/Prak 03/Prak_03.rmd
@@ -107,29 +107,45 @@ Scatterplot digunakan untuk menunjukkan hubungan antara dua variabel numerik.
 
 ```{r fig.height=5, fig.width=11.5, dpi=300}
 chart <-
-ggplot(data_cars, aes(x = cc, y = mpg, color = factor(cyl), shape = factor(trans))) +
+ggplot(data_cars, 
+       aes(x = cc, y = mpg, color = factor(cyl), shape = factor(trans), size = hp)) +
   # Scatterplot
-  geom_point(size = 3) +  
+  geom_point() +  
   
   # Setting 
   labs(title = "Efek Silinder & Transmisi terhadap Efisiensi BBM",
-       subtitle = "",
+       subtitle = "Ukuran plot mengartikan tenaga (hp)",
        x = "Kapasitas Mesin (cc)",
        y = "← Boros          Efisiensi BBM          Irit →",
        color = "Jumlah Silinder",
        shape = "Transmisi") +
   
-  theme_minimal(base_size = 30) +
-  theme(axis.text.y = element_text(hjust = 1, face = "bold", 
-                                   margin = margin(r = 1)),
-        plot.title = element_text(hjust = 0, face = "bold"),
-        plot.subtitle = element_text(hjust = -0.05),
-        panel.grid.major.y = element_blank(),
-        panel.grid.minor.y = element_blank(),
-        panel.grid.major.x = element_blank(),
-        panel.grid.minor.x = element_blank(),
-        axis.line = element_line(linewidth = 0.5, colour = "black")
-  )
+  guides(
+    size = "none", # Hapus legend size(hp)
+    shape = guide_legend(title = NULL)
+  ) + 
+  
+  theme_minimal(base_size = 40) +
+  theme(
+    axis.text.y = element_text(hjust = 1, face = "bold", 
+                               margin = margin(r = 1)),
+    plot.title = element_text(hjust = 0, face = "bold"),
+    plot.subtitle = element_text(hjust = -0.05),
+    
+    # Garis
+    panel.grid.major.y = element_blank(),
+    panel.grid.minor.y = element_blank(),
+    panel.grid.major.x = element_blank(),
+    panel.grid.minor.x = element_blank(),
+    axis.line = element_line(linewidth = 0.5, colour = "black"),
+    
+    # Legend
+    legend.key.size = unit(0.5, "cm"),
+    legend.position = "top",
+    legend.direction = "horizontal",
+    legend.justification = c(-0.055, 0),
+    legend.margin = margin(t = -10, b = -10)
+  ) 
 
 chart
 
